--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -73,19 +73,19 @@ main {
   padding: 20px;
 }
 
-/* Slider Section */
-.slider {
+/* Hero Section */
+.hero {
   position: relative;
   overflow: hidden;
   height: 300px; /* Adjust height as necessary */
 }
 
-.slider img {
+.hero img {
   width: 100%;
   height: auto;
 }
 
-.slider button {
+.hero button {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -230,7 +230,7 @@ footer {
   nav.active .nav-links {
     display: flex; /* 햄버거 클릭 시 가로로 메뉴 표시 */
   }
-  .slider {
+  .hero {
     height: 200px;
   }
 
