--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -19,19 +19,21 @@ body {
 }
 
 form {
-    margin: 0 auto;
-    max-width: 500px;
+  margin: 0 auto;
+  max-width: 500px;
 }
 
 label {
-    display: block;
-    margin-top: 10px;
+  display: block;
+  margin-top: 10px;
 }
 
-input, select, textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin: 5px 0;
 }
 
 /* Header Styles */
@@ -177,7 +179,7 @@ main {
   display: inline-block; /* Allow margins */
   padding: 10px 20px;
   background-color: #28a745; /* Green button */
-  color: white;
+  color: #fff;
   border: none;
   border-radius: 5px; /* Rounded corners */
   text-decoration: none; /* No underline */
@@ -217,7 +219,7 @@ main {
 
 .event-date {
   font-size: 14px; /* Font size for event date */
-  color: #777; /* Lighter text color */
+  color: #004080; /* Lighter text color */
   margin-bottom: 10px; /* Space below date */
 }
 
@@ -331,48 +333,48 @@ main {
 }
 /* Join Page */
 .membership-cards {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 }
 
 .card {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
-    transition: transform 0.3s;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+  transition: transform 0.3s;
 }
 
 .card:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-    background-color: white;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+  background-color: white;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 /* Footer */
