fix: event-link, cta-button css

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -178,7 +178,7 @@ main {
 .cta-button {
   display: inline-block; /* Allow margins */
   padding: 10px 20px;
-  background-color: #28a745; /* Green button */
+  background-color: #007BFF; /* Green button */
   color: #fff;
   border: none;
   border-radius: 5px; /* Rounded corners */
@@ -187,7 +187,7 @@ main {
 }
 
 .cta-button:hover {
-  background-color: #218838; /* Darker green on hover */
+  background-color: #0056b3; /* Darker green on hover */
 }
 
 /* Current Events */
@@ -231,7 +231,7 @@ main {
 
 .event-link {
   text-decoration: none; /* Remove underline */
-  color: #007bff; /* Button color */
+  color: #004080; /* Button color */
   font-weight: bold; /* Bold text for the link */
   transition: color 0.3s; /* Smooth transition for hover */
 }
