--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -187,7 +187,7 @@ main {
 }
 
 .cta-button:hover {
-  background-color: #1f8a32; /* Darker green on hover */
+  background-color: #116821; /* Darker green on hover */
 }
 .cta-button:focus {
   outline: 2px solid #fff;
