fix: event-link, cta-button css

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -178,7 +178,7 @@ main {
 .cta-button {
   display: inline-block; /* Allow margins */
   padding: 10px 20px;
-  background-color: #1a8c29;
+  background-color: #11541b;
   color: #fff;
   border: none;
   border-radius: 5px; /* Rounded corners */
