--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -118,8 +118,8 @@ main {
   left: 50%;
   transform: translateX(-50%);
   padding: 10px 20px;
-  background-color: #007bff; /* Button color */
-  color: white;
+  background-color: #0151c1; /* Button color */
+  color: #fff;
   border: none;
   cursor: pointer;
 }
@@ -149,8 +149,9 @@ main {
 .menu button {
   padding: 10px 20px; /* 버튼 패딩 */
   margin: 0 10px; /* 버튼 사이의 간격 */
-  background-color: #007bff; /* 버튼 색상 */
-  color: white;
+  background-color: #0151c1; /* 버튼 색상 */
+  color: #fff;
+  font-weight: bold;
   border: none;
   cursor: pointer;
   border-radius: 5px; /* 둥근 모서리 */
