--- a/cinequest/css/style.css
+++ b/cinequest/css/style.css
@@ -6,17 +6,27 @@ main {
 
 /* Card List */
 section {
-  padding: 20px 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 30px;
+  padding: 50px 0;
   max-width: 1200px;
   margin: 0 auto;
 }
 
+.main_movie_list > h2 {
+  font-size: 28px; 
+  margin-bottom: 40px; 
+  text-align: center;
+  color: #fff;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 10px;
+  text-transform: uppercase; 
+  letter-spacing: 2px; 
+  border-bottom: 3px solid #ff6347; 
+}
+
 .main_movie_list > ol {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   list-style: none;
   padding: 0;
@@ -87,10 +97,7 @@ section {
 /* Responsive */
 @media (max-width: 768px) {
   .main_movie_list > ol {
-    grid-template-columns: repeat(
-      auto-fit,
-      minmax(150px, 1fr)
-    ); /* 작은 화면에서는 1열 또는 2열로 표시 */
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
