--- a/cinequest/css/base.css
+++ b/cinequest/css/base.css
@@ -36,9 +36,9 @@ li {
   list-style: none;
 }
 
-ul li a:hover {
+/* ul li a:hover {
   text-decoration: underline;
-}
+} */
 
 a {
   text-decoration: none;
@@ -334,7 +334,7 @@ footer {
 #nav > ul > li:first-child a:before {
   display: none;
 }
-
+/* 
 #nav > ul > li > div {
   display: none;
   position: absolute;
@@ -402,7 +402,7 @@ footer {
   line-height: 18px;
   padding: 0 5px;
   color: #fff;
-}
+} */
 
 /* active :depth2 */
 #nav > ul > li.active > a,
